[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hxrxchang", email = "mail@hxrxchang.dev" }
]
dependencies = [
    "sortedcontainers>=2.4.0",
    "ac-library-python @ git+https://github.com/not522/ac-library-python@58f324ec020d57191e7b9e4957b0c5feb5ed3aff",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
