workspace = {members = ["abc156", "abc139", "abc054", "code-festival-2016-qualb", "sumitrust2019", "abc335", "abc326"],exclude = []}
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
